--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoos": "^0.0.1-security",
