--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cloudinary": "^1.33.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "google-auth-library": "^8.7.0",
+    "gravatar": "^1.8.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoos": "^0.0.1-security",
-    "mongoose": "^6.8.1"
+    "jwt-decode": "^3.1.2",
+    "mailgen": "^2.0.27",
+    "mongoose": "^6.8.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
+    "otp-generator": "^4.0.0",
+    "react-google-login": "^5.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
