--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,49 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fullcalendar/core": "^6.0.3",
+    "@fullcalendar/daygrid": "^6.0.3",
+    "@fullcalendar/interaction": "^6.0.3",
+    "@fullcalendar/list": "^6.0.3",
+    "@fullcalendar/react": "^6.0.4",
+    "@fullcalendar/timegrid": "^6.0.3",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.6",
+    "@mui/x-data-grid": "^5.17.20",
+    "@nivo/bar": "^0.55.0",
+    "@nivo/core": "^0.55.0",
+    "@nivo/geo": "^0.55.0",
+    "@nivo/line": "^0.55.0",
+    "@nivo/pie": "^0.55.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.0",
+    "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
+    "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^4.0.3",
-    "web-vitals": "^2.1.4"
+    "react-google-authentication": "^0.0.18",
+    "react-google-login": "^5.2.2",
+    "react-hot-toast": "^2.4.0",
+    "react-modal": "^3.16.1",
+    "react-pro-sidebar": "^1.0.0",
+    "react-redux": "^8.0.5",
+    "react-scripts": "^2.1.3",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
+    "redux-toolkit": "^1.1.2",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +73,6 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.4.5"
+    "react-router-dom": "^6.8.0"
   }
 }
