--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-sidebar": "^3.0.2",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.0",
@@ -41,7 +42,7 @@
     "react-modal": "^3.16.1",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.0.5",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "redux-toolkit": "^1.1.2",
