Product module is almost over

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-sidebar": "^3.0.2",
+    "apexcharts": "^3.37.0",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.0",
@@ -74,6 +75,6 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.1"
   }
 }
