--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -43,7 +44,7 @@
     "react-modal": "^3.16.1",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.0.5",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "redux-toolkit": "^1.1.2",
