--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "otp-generator": "^4.0.0",
+    "randomstring": "^1.2.3",
     "react-google-login": "^5.2.2"
   },
   "devDependencies": {
