--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,6 @@
   "name": "forntend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -20,6 +19,7 @@
     "@nivo/geo": "^0.55.0",
     "@nivo/line": "^0.55.0",
     "@nivo/pie": "^0.55.0",
+    "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -34,17 +34,20 @@
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-authentication": "^0.0.18",
     "react-google-login": "^5.2.2",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.0",
     "react-modal": "^3.16.1",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.0.5",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "redux-toolkit": "^1.1.2",
@@ -75,6 +78,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "react-router-dom": "^6.8.1"
   }
