--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,7 @@ ATLAS_URI=mongodb+srv://MUkeshPrajapati:mukesh3399@cluster0.wspzlbi.mongodb.net/
 SECRET_KEY=mukeqadadad[dadadasdiad]saasfwfw[]
 JWT_EXPIRES_TIME=5d
 COOKIE_EXPIRES_TIME=5
+
+CLOUDINARY_CLOUD_NAME=dkkj6aflt
+CLOUDINARY_API_KEY=256621454422623
+CLOUDINARY_API_SECRET=86-2OyOcGAq4DLdVV1M7AmQb5x0
