--- a/backend/package.json
+++ b/backend/package.json
@@ -1,40 +1,34 @@
 {
-  "name": "backend",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "Server.js",
+  "main": "server",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Mr.Mukesh",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.2",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
-    "cloudinary": "^1.33.0",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
-    "google-auth-library": "^8.7.0",
+    "google-auth-library": "^9.0.0",
     "gravatar": "^1.8.2",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
     "mailgen": "^2.0.27",
-    "mongoose": "^6.8.1",
+    "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.8.0",
-    "otp-generator": "^4.0.0",
-    "randomstring": "^1.2.3",
-    "react-google-login": "^5.2.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1",
+    "otp-generator": "^4.0.1",
+    "randomstring": "^1.3.0"
   }
 }
